--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,8 @@ libc = "0.2.109"
 cfg-if = "1.0.0"
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3.9", features = ["commapi", "fileapi", "handleapi", "ioapiset", "std", "synchapi", "winbase", "winerror", "winreg"] }
+windows-sys = { version = "0.59", features = ["Win32_Devices_Communication", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Threading"] }
+windows-registry = "0.2"
 
 [dev-dependencies]
 assert2 = "0.3.11"
