--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,12 @@ license = "BSD-2-Clause OR Apache-2.0"
 repository = "https://github.com/de-vri-es/serial2-rs"
 documentation = "https://docs.rs/serial2"
 keywords = ["serial", "serial-port", "COM-port", "RS232", "tty"]
-categories = ["hardware-support", "network-programming", "os", "science::robotics"]
+categories = [
+    "hardware-support",
+    "network-programming",
+    "os",
+    "science::robotics",
+]
 
 publish = ["crates-io"]
 edition = "2021"
@@ -42,8 +47,16 @@ libc = "0.2.109"
 cfg-if = "1.0.0"
 
 [target.'cfg(windows)'.dependencies]
-windows-sys = { version = "0.59", features = ["Win32_Devices_Communication", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Threading"] }
-windows-registry = "0.2"
+windows-sys = { git = "https://github.com/microsoft/windows-rs.git", features = [
+    "Win32_Devices_Communication",
+    "Win32_Security",
+    "Win32_Storage_FileSystem",
+    "Win32_System_IO",
+    "Win32_System_Threading",
+    "Win32_System_WindowsProgramming",
+] }
+windows-registry = { git = "https://github.com/microsoft/windows-rs.git" }
+windows-result = { git = "https://github.com/microsoft/windows-rs.git" }
 
 [dev-dependencies]
 assert2 = "0.3.11"
