--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,7 +1,7 @@
 hard_tabs = true
 tab_spaces = 4
 max_width = 120
-imports_layout = "HorizontalVertical"
+#imports_layout = "HorizontalVertical"
 match_block_trailing_comma = true
 overflow_delimited_expr = true
 reorder_impl_items = true
